--- a/topics/configuration/application_create_r.dita
+++ b/topics/configuration/application_create_r.dita
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "reference.dtd">
 <reference id="reference_qhy_qnl_2vb">
-    <title>Create an Application APIs using Object Store </title>
-    <shortdesc>Create a sample ToDo application APIs using Object Store entities. </shortdesc>
+    <title>Create an Application using Object Store </title>
+    <shortdesc>Altair Object Store provides the building blocks required to create and deploy
+        applications.</shortdesc>
     <refbody>
-        <section id="section_zhp_t4l_2vb">
-            <p>We can use the Object Store entities to create objects to generate APIs. Using these
-                APIs, build a simple UI application to manage and monitor daily tasks. </p>
-            <p>Create the following objects in the Object Store to generate the required API
-                    packages:<ul id="ul_u5l_sfs_lvb">
-                    <li>Content Definition</li>
-                    <li>Properties</li>
-                    <li>Actions</li>
-                    <li>Events</li>
-                    <li>Relations</li>
-                </ul></p>
-            <p>Object Store provides an option to build and deploy these objects which will generate
-                the Nodejs and Python packages containing the APIs. We can add these APIs to the UI
-                framework and start using the application to manage and monitor daily tasks.</p>
+        <section id="section_nrd_bv4_nvb">
+            <p> The main steps to build an application are:<ol id="ol_jht_dv4_nvb">
+                    <li>Connect to the Object Store server and create a profile.</li>
+                    <li>Create a local content pack with content definitions.</li>
+                    <li>Add properties, actions, events and relations to content definitions.</li>
+                    <li>Build and Deploy the content pack.</li>
+                    <li>Apply the Object Store packages.</li>
+                    <li>Apply the Web Content pack.</li>
+                    <li>Access the application.</li>
+                </ol></p>
+            <p>Let us examine these steps with an example of a ToDo task management application. </p>
+            <p>The application consists of a list of tasks. A task (ToDo content) consists of a
+                basic description, status (pending, in-progress or done), start and end dates. Tasks
+                can also be assigned a category (Personal or Work).</p>
+            <p>The application also contains notes. A note (Note content) captures text about a
+                task.</p>
+            <p>These are the content definitions we need to create.</p>
         </section>
         <section id="section_ngs_fgs_lvb">
             <title>Content Definition</title>
@@ -29,7 +33,8 @@
         </section>
         <section id="section_nht_ggs_lvb">
             <title>Properties</title>
-            <p>Create the following Properties:<ul id="ul_qyd_npl_2vb">
+            <p>We need to add these properties for the ToDo content definition.<ul
+                    id="ul_qyd_npl_2vb">
                     <li>description - ToDo that you want to accomplish. This is a string property
                         type to define the content of the task.</li>
                     <li>status - Status of the ToDo whether in progress, pending or completed. All
@@ -41,7 +46,8 @@
         </section>
         <section id="section_imn_3gs_lvb">
             <title>Actions</title>
-            <p>Create the following Actions:<ul id="ul_yz4_mtl_2vb">
+            <p>These are the actions that need to be added to the ToDo content definition.<ul
+                    id="ul_yz4_mtl_2vb">
                     <li>Create - Create a ToDo action with the description, status and category</li>
                     <li>GetAll - Get All ToDos that is created by the user from the database</li>
                     <li>Delete - Delete the selected ToDo</li>
@@ -54,7 +60,8 @@
         </section>
         <section id="section_dtw_3gs_lvb">
             <title>Events</title>
-            <p>Create the following Events:<ul id="ul_lnt_ttl_2vb">
+            <p>Here are the Events that need to be added to the ToDo content definition.<ul
+                    id="ul_lnt_ttl_2vb">
                     <li>ToDoCreateEvent - Event is triggered when a ToDo entity is created</li>
                     <li>ToDoDeleteEvent - This event is triggered on deletion of a ToDo entity</li>
                     <li>ToDoModifiedEvent - Trigger on modification of ToDo</li>
@@ -62,7 +69,8 @@
         </section>
         <section id="section_lwr_jgs_lvb">
             <title>Relations</title>
-            <p>Create the following Relations:<ul id="ul_ly3_xtl_2vb">
+            <p>We need to create a relation to Notes from the ToDo content definition.<ul
+                    id="ul_ly3_xtl_2vb">
                     <li>Notes</li>
                 </ul></p>
         </section>
