--- a/topics/get_started/object_store_architecture_r.dita
+++ b/topics/get_started/object_store_architecture_r.dita
@@ -5,25 +5,24 @@
     <shortdesc></shortdesc>
     <refbody>
         <section id="section_ubt_xlg_m5b">
-            <p> Altair <keyword keyref="product"/> platform architectures consist of:<ul
+            <p> Altair <keyword keyref="product"/> platform architecture consists of:<ul
                     id="ul_ttk_zlg_m5b">
-                    <li>Arango Database (third-party software) – a multi-model database that
-                        provides storage capability and a graph model. The database provides Search
-                        capability and it indexes the data based on the index definition. </li>
-                    <li>Redits (third-party software) for distributed data structure
-                        implementation</li>
-                    <li>NATS Event Bus (third-party software)</li>
+                    <li>Arango Database – a multi-model database that provides storage capability
+                        and a graph model. The database provides Search capability and it indexes
+                        the data based on the index definition. </li>
+                    <li>Redis for distributed data structure implementation</li>
+                    <li>NATS Event Bus</li>
                     <li>Root Gateway</li>
                     <li>API Gateway – a downstream gateway that calls the Object Store</li>
                     <li>Authentication Server - Receive Request, Authenticate the user, give JWT
                         token and forward the request to the downstream configured services</li>
-                    <li><keyword keyref="product"/> – a core engine handling configuration and
-                        execution</li>
-                    <li>Environment Manager – a service that curates the execution environment. For
-                        example, PBS and OpenFaaS. This is responsible for authoring the content
-                        definition and deployed in the execution environment. Manages the health of
-                        the environment such as server going down, bringing it up, and addresses the
-                        different functions.</li>
+                    <li><keyword keyref="product"/> engine – a core engine handling configuration
+                        and execution</li>
+                    <li>Environment Manager - a service that curates the execution environment (PBS
+                        or OpenFaaS). This service is responsible for authoring and deployment of
+                        content definitions in the execution environment. It manages the health of
+                        the environment and addresses various functions (for example, bringing up a
+                        server which is down).</li>
                 </ul></p>
         </section>
     </refbody>
