--- a/topics/get_started/object_store_features_r.dita
+++ b/topics/get_started/object_store_features_r.dita
@@ -6,20 +6,27 @@
         combined capabilities of numerous services. </shortdesc>
     <refbody>
         <section id="section_yht_pp1_wtb">
-            <p>The <keyword keyref="product"/> is a Content Management and an action execution
-                engine that applies Access Control List (ACL) and other authorization policies for
-                security.</p>
-            <p><keyword keyref="product"/> features are as follows:<ul id="ul_etr_qp1_wtb">
+            <p>Altair Object Store is an advanced content management system that combines the
+                capabilities of numerous services and an action execution engine that applies Access
+                Control List (ACL) and other authorization policies for enhanced security.</p>
+            <p>The main features of the <keyword keyref="product"/>  are::<ul id="ul_etr_qp1_wtb">
                     <li>Everything in the object store is modeled as an Object. </li>
-                    <li>Author a Content Pack which helps the consumers and providers.</li>
+                    <li>Capability to define, create and manage content through content packs.</li>
                     <li>Supports object extension and ACL.</li>
-                    <li>Author the actions in one language and it can be consumed in many other
+                    <li>Actions can be authored in one language and consumed in other
                         languages.</li>
-                    <li>There is seamless communication between the applications.</li>
-                    <li>Supports various deployment modes.</li>
-                    <li>It is built on a multi-model graph database.</li>
-                    <li>There is a clear separation of storage and computation.</li>
+                    <li>Seamless communication between the applications.</li>
+                    <li>Support various deployment modes.</li>
+                    <li>Built on multi-model graph database for high performance.</li>
+                    <li>Achieves a clear separation of storage and computation.</li>
                 </ul></p>
+        </section>
+        <section id="section_jql_dq4_nvb">
+            <title>Content Packs</title>
+            <p>Content packs encapsulate definitions, actions, applications, events, execution
+                environments and other resources. </p>
+            <p>Consumers can pay and use contents packs authored and deployed by various providers
+                in the Object Store.</p>
         </section>
     </refbody>
 </reference>
